--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,6 +3,8 @@
   <h2><%= link_to topic.title, topic %></h2>
   <p>
     Published at
-    <%= time_ago_in_words(topic.created_at) %>
+    <%= time_ago_in_words(topic.created_at)%>
+    <%= topic.user.email %>
+
   </p>
 <% end %>
