--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
      <div id="buttons">
         <% if user_signed_in? %>
           <%= link_to "New Topic", new_topic_path %>
+          <%= link_to current_user.email, current_user %>
         <% else %>
           <%= link_to "Sign Up", new_user_registration_path %>
           <%= link_to "Sign In", new_user_session_path %>
