--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,7 +4,7 @@
   <p>
     Published at
     <%= time_ago_in_words(topic.created_at)%>
-    <%= topic.user.email %>
+    <%= link_to topic.user.email, current_user %>
 
   </p>
 <% end %>
