--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,9 @@
 <h1>Edit Profile</h1>
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@user, html: { multipart: true}) do |f| %>
+
 	<%= f.label :bio %>
 	<%= f.text_field :bio %>
-	<%= f.submit 'Chang save' %>
+	<%= f.file_field :avatar%>
+	<%= f.submit 'Save change' %>
 <% end %>
