--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,8 @@
 <h1>Edit Profile</h1>
 
-<%= form_for(@user, html: { multipart: true}) do |f| %>
-
-	<%= f.label :bio %>
-	<%= f.text_field :bio %>
-	<%= f.file_field :avatar%>
-	<%= f.submit 'Save change' %>
+<%= simple_form_for(@user, html: { multipart: true }) do |f| %>
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar%>
+  <%= f.input :email %>
+  <%= f.submit 'Save changes' %>
 <% end %>
