--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,6 +4,6 @@
   <p>
     Published at
     <%= time_ago_in_words(topic.created_at)%>
-    <%= link_to topic.user.email, current_user %>
+    <%= link_to(topic.user.email, user_path(topic.user)) %>
   </p>
 <% end %>
