--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Forum1</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-     <div id="buttons">
+<html></html>
+<head>
+  <title>Rails Forum</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css"></link>
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet"></link>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+  <header class='main_header clearfix'>
+    <div class='wrapper'>
+      <div id='logo'>
+        <p>
+          <%= link_to 'Rails Forum', root_path %>
+        </p>
+      </div>
+      <div id='buttons'>
         <% if user_signed_in? %>
-          <%= link_to "New Topic", new_topic_path %>
-          <%= link_to current_user.email, current_user %>
+          <%= link_to 'New Post', new_topic_path %>
+          <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
         <% else %>
-          <%= link_to "Sign Up", new_user_registration_path %>
-          <%= link_to "Sign In", new_user_session_path %>
+          <%= link_to 'Sign Up', new_user_registration_path %>
+          <%= link_to 'Sign In', new_user_session_path %>
         <% end %>
       </div>
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    </div>
+  </header>
+  <div class='wrapper'>
+    <p class='notice'>
+      <%= notice %>
+    </p>
+    <p class='alert'>
+      <%= alert %>
+    </p>
+  </div>
+  <div class='wrapper'>
     <%= yield %>
-  </body>
-</html>
-
-
-
-
-
-
+  </div>
+</body>
