--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <header class='main_header clearfix'>
+  <div class='main_header clearfix'>
     <div class='wrapper'>
       <div id='logo'>
         <p>
@@ -17,7 +17,7 @@
       </div>
       <div id='buttons'>
         <% if user_signed_in? %>
-          <%= link_to 'New Post', new_topic_path %>
+          <%= link_to 'New Topic', new_topic_path %>
           <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to 'Sign Up', new_user_registration_path %>
@@ -25,7 +25,7 @@
         <% end %>
       </div>
     </div>
-  </header>
+  </div>
   <div class='wrapper'>
     <p class='notice'>
       <%= notice %>
