--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,20 +1,19 @@
 <h1><%= @topic.title %></h1>
-  <p>
-    <%= @topic.content %>
-  </p>
-  <% if current_user %>
-    <div id='comments' >
-      <h3>
-        <%= @topic.comments.count %>
-        Comments
-      </h3>
-      <%= render @topic.comments %>
-      <h4>Reply to thread</h4>
-      <%= render 'comments/form' %>
-    </div>
-    <%= link_to 'Edit', edit_topic_path(@topic), class: 'button' %>
-    <%= link_to 'Delete', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure you want to do this?' }, class: 'button' %>
-  <% end %>
-  
-  <%= link_to 'Home', root_path, class: "button" %>
+<p>
+  <%= @topic.content %>
+</p>
+<% if current_user %>
+  <div>
+    <h3>
+      <%= @topic.comments.count %>
+      Comments
+    </h3>
+    <%= render @topic.comments %>
+    <h4>Reply to thread</h4>
+    <%= render 'comments/form' %>
+  </div>
+  <%= link_to 'Edit', edit_topic_path(@topic), class: 'button' %>
+  <%= link_to 'Delete', topic_path(@topic), method: :delete, data: { confirm: 'Are you sure?' }, class: 'button' %>
+<% end %>
 
+<%= link_to 'Home', root_path, class: 'button' %>
