--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,5 +1,7 @@
-<%= simple_form_for @topic do |f| %>
+<%= simple_form_for @topic, html: { multipart: true } do |f| %>
   <%= f.input :title %>
   <%= f.input :content %>
+  <%= f.file_field :image %>
   <%= f.submit %>
+
 <% end %>
