--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,21 +4,19 @@
 <%= image_tag(@user.avatar.url(:medium)) %>
 <%= link_to('Edit', edit_user_path(@user)) if current_user %>
 
-<div>
-  <% @user.topics.each do |topic| %>
-    <%= link_to(topic.title, topic_path) %>
-    <div>
-      Published at <%= time_ago_in_words(topic.created_at) %>
-    </div>
-    <% topic.comments.each do |comment| %>
-      <div>
-        <%= comment.comment %>
-      </div>
-    <% end %>
+<table>
+  <% @user.comments.order('created_at DESC').each do |comment| %>
+    <tr>
+      <td><%= comment.topic.title %></td>
+      <td><%= comment.comment %></td>
+      <td><%= comment.topic.created_at %></td>
+    </tr>
   <% end %>
-</div>
+</table>
 
-<table class="table table-striped">
+
+
+<!-- <table class="table table-striped">
   <thead>
     <tr>
       <th>Topic</th>
@@ -52,3 +50,4 @@
         </tr>
     </tbody>
 </table>
+ -->
